revised overall codes & finally fixed the vertical alignment of the 'access-now-open' button's img & text and fixed the vertical alignment of the list item icons of steps list of 'second brain' section, and I improved the design attractvity with adding mouse hover effect for the button & icons.

--- a/style/style.css
+++ b/style/style.css
@@ -19,6 +19,9 @@
     font-weight: 600;
     font-size: 16px;
 }
+.btn:hover{
+    background-color: #30b868;
+}
 
 .hero-buttons .transparent{
     background-color: transparent;
@@ -59,6 +62,9 @@ header nav{
     font-size: 16px;
     font-weight: 500;
 }
+.menu ul li a:hover{
+    color: #469165;
+}
 
 #hero{
     padding: 116px 120px 180px 120px;
@@ -72,7 +78,6 @@ header nav{
 .open-now-btn{
     display: flex;
     align-items: center;
-    gap: 6px;
     justify-content: center;
     
 }
@@ -86,7 +91,13 @@ header nav{
     font-size: 16px;
     font-weight: 500;
     cursor: pointer;
+    display: inline-flex;
+    gap: 8px;
     align-items: center;
+}
+#hero .open-now-btn button:hover{
+    background-color: #ffffff;
+    color: #30b868;
 }
 .hero-info h1{
     text-transform: capitalize;
@@ -108,11 +119,16 @@ header nav{
 .hero-buttons a{
     text-decoration: none;
 }
-.hero-buttons .btn{
+.hero-buttons .transparent, .hero-buttons .btn{
     padding: 16px;
     display: flex;
     gap: 10px;
 }
+.hero-buttons .transparent:hover{
+    background-color: #ffffff;
+    color: #000000;
+}
+
 /* knowledge section two styles (did at morning - friday) */
 .knowledge-sec-two{
     background-color: #fbfbfb;
@@ -171,6 +187,10 @@ header nav{
     justify-content: center;
     align-items: center;
     color: #ffffff;
+}
+.card-icon i:hover{
+    background-color: #ea4545;
+    color: #e4e4e4;
 }
 
 .card h2{
@@ -237,13 +257,17 @@ header nav{
     font-size: 16px;
     font-weight: 500;
     margin-bottom: 16px;
-    line-height: 1.6;
+    line-height: 1;
+    display: inline-block;
 }
 .steps li i{
     color: #30b868;
     align-self: center;
     flex-shrink: 0;
     font-size: 16px;
+}
+.steps li i:hover{
+    color: #469165;
 }
 .thinking-sec{
     background-color: #ffffff;
@@ -313,6 +337,10 @@ footer{
     align-items: center;
     justify-content: center;
     text-decoration: none;
+}
+.sm-links li a:hover{
+    background-color: #e4e4e4;
+    color: #001931;
 }
 .social-links h4{
     color: #ffffff;
